<resources>
    <string name="app_name">Promotions%Places</string>
    <string name="title_home">Inicio</string>
    <string name="title_profile">Perfil</string>
    <string name="title_notifications">Notificaciones</string>
    <string name="Info_guardada">Información guardada con éxito</string>

    <string name="editxt_enviarte">P%P desea enviarte información</string>
    <string name="editxt_ilusión">¡Que gusto tenerte con nosotros!</string>
    <string name="editxt_blue">*Antes de comenzar, ¡Enciende tu bluetooth!</string>
    <string name="txt_permitir">Permitir</string>
    <string name="txt_rechazar">Rechazar</string>
    <string name="txt_menu">MENÚ</string>
    <string name="txt_redes">Redes sociales</string>
    <string name="txt_galeria">Galería</string>
    <string name="txt_datosGuardados">Los cambios se guardaron exitosamente</string>

    <string name="txt_bienvenida">¡Hola, Bienvenido a P%P!</string>
    <string name="txt_cupones">Cupones y ofertas</string>
    <string name="txt_nuevoCupon">  Nuevo Cupón</string>
    <string name="porcientoDesc">  20% de Descuento</string>
    <string name="Domingo">  Domingo de promoción</string>


    <string name="btn_iniciar">Iniciar</string>
    <string name="btn_editar">Editar</string>
    <string name="btn_cerrarSesion">Cerrar Sesión</string>
    <string name="btn_permitir">Permitir</string>
    <string name="btn_regresar">Regresar</string>
    <string name="btn_comprobar">Comprobar cupones</string>
    <string name="btn_rechazar">Rechazar</string>
    <string name="btn_entendido">Entendido</string>

    <string name="button_loginEntrar">Entrar</string>
    <string name="button_loginRegistrar">Registrarse</string>

    <string name="label_usuario">Usuario</string>
    <string name="label_pass">Contraseña</string>
    <string name="btn_entrar">Entrar</string>

    <string name="label_nombre">Nombre</string>
    <string name="label_apellido">Apellido</string>
    <string name="label_nomusuario">Usuario</string>
    <string name="label_newpass">Crear contraseña</string>
    <string name="label_fecha_nac">Fecha de nacimiento</string>
    <string name="label_cod_postal">Código postal</string>
    <string name="label_contraseñaActual">Contraseña actual</string>
    <string name="label_contraseñaNueva">Contraseña nueva</string>
    <string name="txt_cup">CUPÓN $150</string>
    <string name="txt_cuponValido">CONCEPTO          Cupón valido por la cantidad de $150 en cervezas light</string>
    <string name="txt_pideEmpleado">Pide a uno de los empleados de P%P que te haga valida la promoción</string>
    <string name="txt_aplica">Sólo aplica en cervezas light</string>


    <string name="btn_aceptar">Aceptar</string>
    <string name="label_term_cond">Al hacer clic en Aceptar admite los terminos y condiciones de P%P</string>

    <string name="tituloUno">Terminos y Condiciones</string>
    <string name="textoUno">Bienvenido a los Términos y Condiciones de Uso de Promotions%Places en base a los servicios de
        P%P. Estos constituyen un acuerdo vinculante entre cualquier persona física o moral (en adelante e indistintamente,
        el “Usuario” o los “Usuarios”) que descarguen, usen o interactúen con la Aplicación y/o soliciten cualquier servicio
        disponible a través de la Aplicación.</string>
    <string name="textoDos">Si usted no está de acuerdo con los presentes, no descargue la Aplicación en su dispositivo, no la
        utilice, ni interactúe con los Servicios. El Usuario garantiza tener la edad mínima necesaria para utilizar y solicitar
        los Servicios, que estará vinculada con la edad mínima requerida.</string>
    <string name="textoTres">Por otra parte, las Notificaciones consisten en que el Usuario pueda recibir notificaciones sobre
        la publicidad de P%P, recibir cupones, descuentos y ofertas, siempre y cuando cuente con un sistema Bluetooth®
        habilitado y haya concedido permiso para que la Aplicación lo utilice.</string>
</resources>