<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".TerminosActivity">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="4dp"
        android:elevation="8dp"
        android:layout_margin="8dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal|center_vertical"
            android:background="#fff"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tituloUno"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/tituloUno"
                android:textColor="@color/color_Black"
                android:textSize="18dp"></TextView>

            <com.codesgood.views.JustifiedTextView
                android:id="@+id/parrafoUno"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:layout_marginTop="20dp"
                android:gravity="center"
                android:text="@string/textoUno"
                android:textColor="@android:color/black"
                android:textSize="17sp" />

            <com.codesgood.views.JustifiedTextView
                android:id="@+id/parrafoDos"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:layout_marginTop="20dp"
                android:gravity="center"
                android:text="@string/textoDos"
                android:textColor="@android:color/black"
                android:textSize="17sp" />

            <com.codesgood.views.JustifiedTextView
                android:id="@+id/parrafoTres"
                android:layout_width="match_parent"
                android:layout_height="161dp"
                android:layout_margin="8dp"
                android:layout_marginTop="20dp"
                android:gravity="center"
                android:text="@string/textoTres"
                android:textColor="@android:color/black"
                android:textSize="17sp" />


        </LinearLayout>


    </androidx.cardview.widget.CardView>

</ScrollView>