<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="@mipmap/tarro"
    android:layout_height="match_parent"
    tools:context=".Cupon">

    <Button
        android:id="@+id/btn_regresar"
        android:layout_width="259dp"
        android:layout_height="56dp"
        android:layout_marginTop="36dp"
        android:background="@drawable/btn_fondo_color"
        android:elevation="5dp"
        android:onClick="NotificationlFragment"
        android:text="@string/btn_regresar"
        android:textColor="#fff"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView6"
        app:layout_constraintVertical_bias="0.424"></Button>

    <Button
        android:id="@+id/btn_aceptarcuenta4"
        android:layout_width="259dp"
        android:layout_height="56dp"
        android:layout_marginTop="36dp"
        android:background="@drawable/btn_fondo_color"
        android:elevation="5dp"
        android:onClick="ConceptoCupon"
        android:text="@string/btn_aceptar"
        android:textColor="#fff"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView6"
        app:layout_constraintVertical_bias="0.075"></Button>

    <TextView
        android:id="@+id/textView6"
        android:layout_width="246dp"
        android:layout_height="103dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/btn_redondeado_blanco"
        android:gravity="center"
        android:text="@string/txt_aplica"
        android:textSize="27sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="348dp"
        android:layout_height="200dp"
        android:layout_marginTop="108dp"
        android:background="@drawable/btn_fondo_color"
        android:gravity="center"
        android:text="@string/txt_cup"
        android:textSize="70sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.492"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>