<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Requisitos">


    <TextView
        android:layout_width="match_parent"
        android:layout_height="50dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="206dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            app:srcCompat="@mipmap/promoplaces_foreground" />

        <ImageView
            android:id="@+id/imageView4"
            android:layout_width="125dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            app:srcCompat="@drawable/promotionsicono" />

    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="25dp" />

    <TextView
        android:id="@+id/editTextTextPersonName2"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:gravity="center|top"
        android:text="@string/editxt_ilusión"
        android:textSize="24sp" />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="25dp" />

    <TextView
        android:id="@+id/editTextTextPersonName3"
        android:layout_width="match_parent"
        android:layout_height="65dp"
        android:gravity="center"
        android:text="@string/editxt_blue"
        android:textSize="18sp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="93dp" />

    <Button
        android:id="@+id/button3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/btn_redondeado_gris"
        android:backgroundTint="#F3FF5722"
        android:onClick="Entendido"
        android:text="@string/btn_entendido" />

</LinearLayout>