<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ConceptoCupon">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@mipmap/tarro_round"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteX="-16dp">

        <ImageView
            android:id="@+id/imageView6"
            android:layout_width="286dp"
            android:layout_height="176dp"
            android:src="@mipmap/ic_promoplace_round"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.496"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"></ImageView>

        <TextView
            android:id="@+id/textView2"
            android:layout_width="314dp"
            android:layout_height="200dp"
            android:background="@drawable/btn_fondo_color"
            android:gravity="center"
            android:text="@string/txt_cuponValido"
            android:textSize="30sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.494"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView3"
            app:layout_constraintVertical_bias="0.068" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="324dp"
            android:layout_height="173dp"
            android:layout_marginTop="8dp"
            android:background="@drawable/btn_redondeado_blanco"
            android:gravity="center"
            android:text="@string/txt_pideEmpleado"
            android:textSize="25sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.494"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView6" />

        <Button
            android:id="@+id/btn_regresar2"
            android:layout_width="259dp"
            android:layout_height="56dp"
            android:layout_marginTop="36dp"
            android:layout_marginBottom="60dp"
            android:background="@drawable/btn_redondeado_gris"
            android:elevation="5dp"
            android:onClick="PerfilFragment"
            android:text="@string/btn_regresar"
            android:textColor="#fff"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView6"
            app:layout_constraintVertical_bias="0.424"></Button>
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>