<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">
    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:src="@mipmap/ic_vaso_foreground"
        android:scaleType="centerCrop"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="#d8000000">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="75dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="92dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView6"
                android:layout_width="10sp"
                android:layout_height="wrap_content"
                android:layout_weight="1" />

            <ImageButton
                android:id="@+id/imageButton_cuponnnn"
                android:layout_width="10dp"
                android:layout_height="43dp"
                android:layout_weight="1"
                android:background="@android:color/transparent"
                android:scaleType="centerInside"
                android:src="@drawable/anadir"
                android:tint="#FFEB3B" />

            <TextView
                android:id="@+id/editTextTextPersonName3"
                android:layout_width="wrap_content"
                android:layout_height="45dp"
                android:layout_weight="1"
                android:ems="10"
                android:gravity="center"
                android:text="@string/txt_nuevoCupon"
                android:textColor="#FFFFFF"
                android:textSize="24sp" />
        </LinearLayout>


        <TextView
            android:id="@+id/textView10"
            android:layout_width="match_parent"
            android:layout_height="20dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="92dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView67"
                android:layout_width="10sp"
                android:layout_height="wrap_content"
                android:layout_weight="1" />

            <ImageButton
                android:id="@+id/imageButtonn"
                android:layout_width="10dp"
                android:layout_height="43dp"
                android:layout_weight="1"
                android:background="@android:color/transparent"
                android:scaleType="centerInside"
                android:src="@drawable/anadir"
                android:tint="#FFEB3B" />

            <TextView
                android:id="@+id/editTextTextPersonName4"
                android:layout_width="wrap_content"
                android:layout_height="45dp"
                android:layout_weight="1"
                android:ems="10"
                android:gravity="center"
                android:text="@string/porcientoDesc"
                android:textColor="#FFFFFF"
                android:textSize="24sp" />
        </LinearLayout>

        <TextView
            android:id="@+id/textView100"
            android:layout_width="match_parent"
            android:layout_height="20dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="92dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textViewName"
                android:layout_width="10sp"
                android:layout_height="wrap_content"
                android:layout_weight="1" />

            <ImageButton
                android:id="@+id/imageButto"
                android:layout_width="10dp"
                android:layout_height="43dp"
                android:layout_weight="1"
                android:background="@android:color/transparent"
                android:scaleType="centerInside"
                android:src="@drawable/anadir"
                android:tint="#FFEB3B" />

            <TextView
                android:id="@+id/editTextTextPersonName34"
                android:layout_width="wrap_content"
                android:layout_height="45dp"
                android:layout_weight="1"
                android:ems="10"
                android:gravity="center"
                android:text="@string/Domingo"
                android:textColor="#FFFFFF"
                android:textSize="24sp" />
        </LinearLayout>


        <TextView
            android:id="@+id/textView99"
            android:layout_width="match_parent"
            android:layout_height="20dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="92dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textVie97"
                android:layout_width="10sp"
                android:layout_height="wrap_content"
                android:layout_weight="1" />

            <Button
                android:id="@+id/imageButton_cupon"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/btn_fondo_color"
                android:text="@string/btn_comprobar"
                android:textColor="#fff"
                android:textSize="16sp" />

        </LinearLayout>


    </LinearLayout>


</RelativeLayout>